# i18n/api/fr.ts
@@ -34,8 +34,7 @@ const fr: Translations = {
     maritalStatus: 'Quel est votre état civil actuel?',
     partnerIncome:
       'Quel est le revenu net annuel de votre partenaire en dollars canadiens?',
-    partnerReceivingOas:
-      'FRENCH: Does your partner receive a full OAS pension?',
+    partnerBenefitStatus: "Laquelle des options suivantes s'applique à vous?",
     everLivedSocialCountry:
       'Avez-vous déjà vécu dans un pays avec un accord de <a href="https://www.canada.ca/fr/agence-revenu/services/impot/entreprises/sujets/retenues-paie/retenues-paie-cotisations/regime-pensions-canada-rpc/employes-employeurs-etrangers/accords-sociaux-canada-autres-pays.html" target="_blank">sécurité sociale</a> établi?',
   },
@@ -63,6 +62,27 @@ const fr: Translations = {
       { key: 'widowed', text: 'Partenaire survivant/veuf(ve)' },
       { key: 'divorced', text: 'Divorcé(e)' },
       { key: 'separated', text: 'Séparé(e)' },
+    ],
+    partnerBenefitStatus: [
+      {
+        key: 'fullOas',
+        text: 'Mon partenaire reçoit la pleine pension de la SV',
+      },
+      {
+        key: 'fullOasGis',
+        text: 'Mon partenaire reçoit la pleine pension de la SV et le SRG',
+      },
+      {
+        key: 'partialOas',
+        text: 'Mon partenaire reçoit une pension partielle de la SV',
+      },
+      {
+        key: 'partialOasGis',
+        text: 'Mon partenaire reçoit une pension partielle de la SV et le SRG',
+      },
+      { key: 'allowance', text: "Mon partenaire reçoit l'Allocation" },
+      { key: 'none', text: 'Aucune de ces réponses' },
+      { key: 'helpMe', text: 'Aidez-moi à savoir' },
     ],
     livingCountry: [
       { key: 'CAN', text: 'Canada' },
