# i18n/api/index.ts
@@ -38,12 +38,13 @@ export interface Translations {
     yearsInCanadaSince18: string
     maritalStatus: string
     partnerIncome: string
-    partnerReceivingOas: string
+    partnerBenefitStatus: string
     everLivedSocialCountry: string
   }
   questionOptions: {
     legalStatus: KeyAndText[]
     maritalStatus: KeyAndText[]
+    partnerBenefitStatus: KeyAndText[]
     livingCountry: KeyAndText[]
   }
   detail: {
