# utils/api/definitions/fields.ts
@@ -10,7 +10,7 @@ export enum FieldKey {
   YEARS_IN_CANADA_SINCE_18 = 'yearsInCanadaSince18',
   MARITAL_STATUS = 'maritalStatus',
   PARTNER_INCOME = 'partnerIncome',
-  PARTNER_RECEIVING_OAS = 'partnerReceivingOas',
+  PARTNER_BENEFIT_STATUS = 'partnerBenefitStatus',
   EVER_LIVED_SOCIAL_COUNTRY = 'everLivedSocialCountry',
 }
 
@@ -81,11 +81,11 @@ export const fieldDefinitions: FieldDefinitions = {
     type: FieldType.BOOLEAN,
     default: undefined,
   },
-  [FieldKey.PARTNER_RECEIVING_OAS]: {
-    key: FieldKey.PARTNER_RECEIVING_OAS,
+  [FieldKey.PARTNER_BENEFIT_STATUS]: {
+    key: FieldKey.PARTNER_BENEFIT_STATUS,
     category: { key: FieldCategory.PARTNER_DETAILS },
     order: 9,
-    type: FieldType.BOOLEAN,
+    type: FieldType.RADIO,
     default: undefined,
   },
   [FieldKey.PARTNER_INCOME]: {
